--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
+    "react-table": "^7.8.0",
     "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4"
   },
